<resources>
    <string name="app_name">AssignmentA2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="think_tank">Think Tank</string>
    <string name="get_quizzical">Let\'s Get Quizzical!</string>
    <string name="description1">description 1</string>
    <string name="random_fact">Random Fact</string>
    <string name="description2">description 2</string>
    <string name="changeme">third feature</string>
    <string name="description3">description 3</string>

    <string name="quiz">QUIZ</string>
    <string name="quiz_desc">Let\s Get Quizzical! Click me to expand your knowledge in a Jeopardy-style quiz!</string>
    <string name="pt_100">$100</string>
    <string name="pt_200">$200</string>
    <string name="pt_300">$300</string>
    <string name="pt_400">$400</string>
    <string name="pt_500">$500</string>

    <string name="question">Question</string>
    <string name="hint">Type your answer here&#8230;</string>
    <string name="fetch_qn">Fetching questions&#8230;</string>
    <string name="btn_go">GO</string>


    <string name="learn">LEARN</string>
    <string name="learn_desc">If you would like to learn new random facts, this is the place to be!</string>
    <string name="fetch_fact">Fetching fact&#8230;</string>
    <string name="refresh">REFRESH</string>


    <string name="view_ans">View Answer</string>

    <string name="text">text</string>

</resources>
