<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity"
    android:background="#3F51B5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/think_tank"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:padding="12dp" />

    <LinearLayout
        android:id="@+id/quiz_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="13dp"
        android:orientation="vertical"
        android:background="@drawable/custom_layout_one"
        android:padding="22dp"
        android:elevation="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_quizzical"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="3dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description1"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:padding="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="13dp"
        android:orientation="vertical"
        android:background="@drawable/custom_layout_two"
        android:padding="22dp"
        android:elevation="25dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random_fact"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="3dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description2"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:padding="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="13dp"
        android:orientation="vertical"
        android:background="@drawable/custom_layout_tzhree"
        android:padding="22dp"
        android:elevation="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeme"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="3dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description3"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:padding="2dp" />

    </LinearLayout>

</LinearLayout>