<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#128AC6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/text"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#137BAF"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingTop="10dp"
            android:paddingRight="70dp"
            android:paddingBottom="10dp"
            android:text="@string/pt_100"
            android:textColor="#F9EE56"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#137BAF"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingTop="10dp"
            android:paddingRight="70dp"
            android:paddingBottom="10dp"
            android:text="@string/pt_200"
            android:textColor="#F9EE56"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#137BAF"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingTop="10dp"
            android:paddingRight="70dp"
            android:paddingBottom="10dp"
            android:text="@string/pt_300"
            android:textColor="#F9EE56"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#137BAF"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingTop="10dp"
            android:paddingRight="70dp"
            android:paddingBottom="10dp"
            android:text="@string/pt_400"
            android:textColor="#F9EE56"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#137BAF"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingTop="10dp"
            android:paddingRight="70dp"
            android:paddingBottom="10dp"
            android:text="@string/pt_500"
            android:textColor="#F9EE56"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/person"
            android:tint="@color/white"
            android:contentDescription="@null"/>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#ACB6B7"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#3F4140"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#1E9B58">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/mark_check"
                    android:contentDescription="@null"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CB1C05">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/mark_delete"
                    android:contentDescription="@null"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>